src/test/compile-fail/extenv-no-args.rs
// error-pattern:malformed #env call

fn main() {
    #env();
}
